--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -31,8 +30,8 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "socket.io": "^4.6.1"
   }
 }
